--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "eldtimes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://zachriegel.github.io/eldtimes",
+  "homepage": "http://zachriegel.github.io/cards",
   "dependencies": {
-    "@material-ui/core": "^4.0.1",
-    "firebase": "^6.1.0",
+    "@material-ui/core": "^4.10.2",
+    "firebase": "^6.6.2",
     "gh-pages": "^3.1.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.2.1"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start --no-cache",
     "build": "react-scripts build",
     "test": "react-scripts test --no-cache",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,9 +36,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "css-loader": "^2.1.1"
   }
