--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "homepage": "http://zachriegel.github.io/cards",
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
-    "firebase": "^6.6.2",
+    "firebase": "^7.15.5",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.0.1",
-    "styled-components": "^4.4.1"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start --no-cache",
@@ -38,8 +37,6 @@
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.10.1",
-    "babel-plugin-transform-function-bind": "^6.22.0",
-    "css-loader": "^2.1.1"
+    "@babel/preset-react": "^7.10.1"
   }
 }
