--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "cannon-es": "^0.15.0",
-    "firebase": "^8.0.0",
+    "firebase": "^8.2.9",
     "framer-motion": "^1.11.1",
     "gh-pages": "^3.1.0",
     "html2canvas": "^1.0.0-rc.5",
+    "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
